--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ STRIPE_SECRET_KEY=sk_test_SxIo3nr4GDoEAdJuHAGM9Y7u
 
 
 
-AWS_ACCESS_KEY_ID:AKIAJFNXHDADZXTWE6JA
-AWS_SECRET_ACCESS_KEY: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
-S3_BUCKET_NAME: artists4charity
+AWS_ACCESS_KEY_ID=AKIAJFNXHDADZXTWE6JA
+AWS_SECRET_ACCESS_KEY=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
+S3_BUCKET_NAME=artists4charity
