--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -12,6 +12,10 @@
 #  artist_id          :integer
 #  created_at         :datetime
 #  updated_at         :datetime
+#  pic_file_name      :string(255)
+#  pic_content_type   :string(255)
+#  pic_file_size      :integer
+#  pic_updated_at     :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
